--- a/index.html
+++ b/index.html
@@ -1227,7 +1227,7 @@
 	<span id="161#turba" data-intext="turba" data-perslemma="turba" data-lemma="turba turbae f." data-pos="n-s---fn-" data-shortdef="uproar, commotion, crowd">turba</span>
 	<span id="161#sorōrum" data-intext="sorōrum" data-perslemma="soror" data-lemma="soror sorōris f." data-pos="n-p---fg-" data-shortdef="sister">sorōrum</span>
 	<span id="161#face" data-intext="face" data-perslemma="fax" data-lemma="fax facis f." data-pos="n-s---fb-" data-shortdef="torch">face</span>
-	<span id="161#Tartareā" data-intext="Tartareā" data-perslemma="Tartareus" data-lemma="Tartareus –a –um" data-pos="a-s---fb-" data-shortdef="pertaining to Tartarus; Tartarean">Tartareā</span>,
+	<span id="161#Tartareā" data-intext="Tartareā" data-perslemma="Tartareus" data-lemma="Tartareus –a –um" data-pos="a-s---fb-" data-shortdef="pertaining to Tartarus; Tartarean">Tartareā</span>
 </p>
 <p data-ln="162">
 	<span id="162#Phlegethōnque" data-intext="Phlegethōnque" data-perslemma="Phlegethon" data-lemma="Phlegethōn –ontis m." data-pos="n-s---mn-" data-shortdef="Phlegethon">Phlegethōnque</span>
@@ -1263,7 +1263,7 @@
 </p>
 <p data-ln="167">
 	<span id="167#flūmina" data-intext="flūmina" data-perslemma="flumen" data-lemma="flūmen flūminis n." data-pos="n-p---na-" data-shortdef="river">flūmina</span>
-	<span id="167#servat" data-intext="servat" data-perslemma="servo" data-lemma="servō servāre servāvī servātus" data-pos="v3spia---" data-shortdef="to save">servat</span>
+	<span id="167#servat" data-intext="servat" data-perslemma="servo" data-lemma="servō servāre servāvī servātus" data-pos="v3spia---" data-shortdef="to save">servat</span>,
 	<span id="167#dūrus" data-intext="dūrus" data-perslemma="durus" data-lemma="dūrus –a –um" data-pos="a-s---mn-" data-shortdef="hard, harsh">dūrus</span>
 	<span id="167#sēniō" data-intext="sēniō" data-perslemma="senium" data-lemma="senium –ī n." data-pos="n-s---nb-" data-shortdef="the feebleness of age, senility">sēniō</span>
 </p>
@@ -1315,7 +1315,7 @@
 </p>
 <p data-ln="175">
 	<span id="175#maiōra" data-intext="maiōra" data-perslemma="magnus" data-lemma="magnus –a –um" data-pos="a-p---nac" data-shortdef="great">maiōra</span>
-	<span id="175#virīs" data-intext="virīs" data-perslemma="vir" data-lemma="vir virī m." data-pos="n-p---mb-" data-shortdef="man">virīs</span>,
+	<span id="175#virīs" data-intext="virīs" data-perslemma="vir" data-lemma="vir virī m." data-pos="n-p---mb-" data-shortdef="man">virīs</span>;
 	<span id="175#bis" data-intext="bis" data-perslemma="bis" data-lemma="bis" data-pos="d--------" data-shortdef="twice">bis</span>
 	<span id="175#Cadmēum" data-intext="Cadmēum" data-perslemma="Cadmeus" data-lemma="Cadmēus (Cadmēius) –a –um" data-pos="a-s---na-" data-shortdef="Cadmean">Cadmēum</span>
 </p>
@@ -1336,7 +1336,8 @@
 	<span id="178#silentī" data-intext="silentī" data-perslemma="sileo" data-lemma="sileō silēre siluī" data-pos="v-sppafb-" data-shortdef="to be silent">silentī</span>
 </p>
 <p data-ln="179">
-	‹<span id="179#circā" data-intext="circā" data-perslemma="circa" data-lemma="circā" data-pos="r--------" data-shortdef="around (adv. and prep. +acc.)">circā</span>
+	‹<span id="179#bis" data-intext="bis" data-perslemma="bis" data-lemma="bis" data-pos="d--------" data-shortdef="twice">bis</span>
+	<span id="179#per" data-intext="per" data-perslemma="per" data-lemma="per" data-pos="r--------" data-shortdef="through">per</span>
 	<span id="179#mūrōs" data-intext="mūrōs" data-perslemma="murus" data-lemma="mūrus mūrī m." data-pos="n-p---ma-" data-shortdef="wall">mūrōs</span>›
 	<span id="179#Amphīoniōs" data-intext="Amphīoniōs" data-perslemma="Amphionius" data-lemma="Amphīonius –a –um" data-pos="a-p---ma-" data-shortdef="Amphionian">Amphīoniōs</span>
 	<span id="179#ululāsse" data-intext="ululāsse" data-perslemma="ululo" data-lemma="ululō ululāre ululāvī ululātus" data-pos="v--rna---" data-shortdef="to howl">ululāsse</span>
@@ -1347,7 +1348,7 @@
 	<span id="180#dīra" data-intext="dīra" data-perslemma="dirus" data-lemma="dīrus –a –um" data-pos="a-s---fn-" data-shortdef="bad omens; curses">dīra</span>
 	<span id="180#nōvī" data-intext="nōvī" data-perslemma="novus" data-lemma="novus –a –um" data-pos="a-s---ng-" data-shortdef="new">nōvī</span>
 	<span id="180#faciēs" data-intext="faciēs" data-perslemma="facies" data-lemma="faciēs facieī f." data-pos="n-s---fn-" data-shortdef="appearance">faciēs</span>
-	<span id="180#lētī" data-intext="lētī" data-perslemma="letum" data-lemma="lētum letī n." data-pos="n-s---ng-" data-shortdef="death">lētī</span>
+	<span id="180#lētī" data-intext="lētī" data-perslemma="letum" data-lemma="lētum letī n." data-pos="n-s---ng-" data-shortdef="death">lētī</span> —
 </p>
 <p data-ln="181">
 	<span id="181#gravior" data-intext="gravior" data-perslemma="gravis" data-lemma="gravis grave" data-pos="a-s---fnc" data-shortdef="heavy">gravior</span>
@@ -1358,20 +1359,20 @@
 <p data-ln="182">
 	<span id="182#alligat" data-intext="alligat" data-perslemma="alligo" data-lemma="alligō alligāre alligāvī alligātus" data-pos="v3spia---" data-shortdef="to tie or bind to; hold fast">alligat</span>
 	<span id="182#artūs" data-intext="artūs" data-perslemma="artus2" data-lemma="artus –ūs m." data-pos="n-p---ma-" data-shortdef="a joint, the limbs">artūs</span>
-	<span id="182#languor" data-intext="languor" data-perslemma="languor" data-lemma="languor –ōris m." data-pos="n-s---mn-" data-shortdef="feebleness, weariness">languor</span>,
+	<span id="182#languor" data-intext="languor" data-perslemma="languor" data-lemma="languor –ōris m." data-pos="n-s---mn-" data-shortdef="feebleness, weariness">languor</span>
 	<span id="182#et" data-intext="et" data-perslemma="et" data-lemma="et" data-pos="c--------" data-shortdef="and">et</span>
 	<span id="182#aegrō" data-intext="aegrō" data-perslemma="aeger" data-lemma="aeger aegra aegrum" data-pos="a-s---mb-" data-shortdef="sick">aegrō</span>
 </p>
 <p data-ln="183">
 	<span id="183#rubor" data-intext="rubor" data-perslemma="rubor" data-lemma="rubor rubōris m." data-pos="n-s---mn-" data-shortdef="redness">rubor</span>
 	<span id="183#in" data-intext="in" data-perslemma="in" data-lemma="in" data-pos="r--------" data-shortdef="in, on">in</span>
-	<span id="183#vultū" data-intext="vultū" data-perslemma="vultus" data-lemma="vultus vultūs m." data-pos="n-s---mb-" data-shortdef="expression">vultū</span>,
+	<span id="183#vultū" data-intext="vultū" data-perslemma="vultus" data-lemma="vultus vultūs m." data-pos="n-s---mb-" data-shortdef="expression">vultū</span>
 	<span id="183#maculaeque" data-intext="maculaeque" data-perslemma="macula1" data-lemma="macula –ae f." data-pos="n-p---fn-" data-shortdef="spot">maculaeque</span>
 	<span id="183#cutem" data-intext="cutem" data-perslemma="cutis" data-lemma="cutis –is f." data-pos="n-s---fa-" data-shortdef="the skin">cutem</span>
 </p>
 <p data-ln="184">
 	<span id="184#sparsēre" data-intext="sparsēre" data-perslemma="spargo1" data-lemma="spargō spargere sparsī sparsum" data-pos="v3pria---" data-shortdef="to scatter">sparsēre</span>
-	<span id="184#levēs" data-intext="levēs" data-perslemma="levis" data-lemma="levis –e" data-pos="a-p---fn-" data-shortdef="light, delicate, small">levēs</span>.
+	<span id="184#levēs" data-intext="levēs" data-perslemma="levis" data-lemma="levis –e" data-pos="a-p---fn-" data-shortdef="light, delicate, small">levēs</span>;
 	<span id="184#tum" data-intext="tum" data-perslemma="tum" data-lemma="tum or tunc" data-pos="d--------" data-shortdef="then, at that time">tum</span>
 	<span id="184#vapor" data-intext="vapor" data-perslemma="vapor" data-lemma="vapor –ōris m." data-pos="n-s---mn-" data-shortdef="vapor, steam; heat">vapor</span>
 	<span id="184#ipsam" data-intext="ipsam" data-perslemma="ipse" data-lemma="ipse ipsa ipsum" data-pos="p-s---fa-" data-shortdef="himself, herself, itself (intensive)">ipsam</span>
@@ -1381,6 +1382,15 @@
 	<span id="185#arcem" data-intext="arcem" data-perslemma="arx" data-lemma="arx arcis f." data-pos="n-s---fa-" data-shortdef="summit, citadel">arcem</span>
 	<span id="185#flammeus" data-intext="flammeus" data-perslemma="flammeus" data-lemma="flammeus –a –um" data-pos="a-s---mn-" data-shortdef="fiery, flaming">flammeus</span>
 	<span id="185#ūrit" data-intext="ūrit" data-perslemma="uro" data-lemma="ūrō ūrere ussī ustum" data-pos="v3spia---" data-shortdef="to burn">ūrit</span>
+</p>
+<p data-ln="187b">
+	<span id="187b#et" data-intext="et" data-perslemma="et" data-lemma="et" data-pos="c--------" data-shortdef="and">et</span>
+	<span id="187b#sacer" data-intext="sacer" data-perslemma="sacer" data-lemma="sacer sacra sacrum" data-pos="a-s---mn-" data-shortdef="holy">sacer</span>
+	<span id="187b#ignis" data-intext="ignis" data-perslemma="ignis" data-lemma="ignis ignis m." data-pos="n-s---mn-" data-shortdef="fire">ignis</span>
+</p>
+<p data-ln="188a">
+	<span id="188a#pāscitur" data-intext="pāscitur" data-perslemma="pasco" data-lemma="pāscō pāscere pāvī pāstum" data-pos="v3spip---" data-shortdef="to feed">pāscitur</span>
+	<span id="188a#artūs" data-intext="artūs" data-perslemma="artus2" data-lemma="artus –ūs m." data-pos="n-p---ma-" data-shortdef="a joint, the limbs">artūs</span>;
 </p>
 <p data-ln="186">
 	<span id="186#multōque" data-intext="multōque" data-perslemma="multus" data-lemma="multus –a –um" data-pos="a-s---mb-" data-shortdef="much, many">multōque</span>
@@ -1394,7 +1404,7 @@
 </p>
 <p data-ln="188b">
 	<span id="188b#resonant" data-intext="resonant" data-perslemma="resono" data-lemma="resonō resonāre resonāvī resonātus" data-pos="v3ppia---" data-shortdef="to resound">resonant</span>
-	<span id="188b#aurēs" data-intext="aurēs" data-perslemma="auris" data-lemma="auris auris f." data-pos="n-p---fn-" data-shortdef="ear">aurēs</span>
+	<span id="188b#aurēs" data-intext="aurēs" data-perslemma="auris" data-lemma="auris auris f." data-pos="n-p---fn-" data-shortdef="ear">aurēs</span>,
 </p>
 <p data-ln="189">
 	<span id="189#stillatque" data-intext="stillatque" data-perslemma="stillo" data-lemma="stillō stillāre stillāvī stillātus" data-pos="v3spia---" data-shortdef="to drip with">stillatque</span>
@@ -1403,7 +1413,7 @@
 	<span id="189#aduncae" data-intext="aduncae" data-perslemma="aduncus" data-lemma="aduncus –a –um" data-pos="a-s---fg-" data-shortdef="hooked, bent">aduncae</span>
 </p>
 <p data-ln="190">
-	<span id="190#cruor" data-intext="cruor" data-perslemma="cruor" data-lemma="cruor cruōris m." data-pos="n-s---mn-" data-shortdef="blood, bloodshed">cruor</span>
+	<span id="190#cruor" data-intext="cruor" data-perslemma="cruor" data-lemma="cruor cruōris m." data-pos="n-s---mn-" data-shortdef="blood, bloodshed">cruor</span>,
 	<span id="190#et" data-intext="et" data-perslemma="et" data-lemma="et" data-pos="c--------" data-shortdef="and">et</span>
 	<span id="190#vēnās" data-intext="vēnās" data-perslemma="vena" data-lemma="vēna vēnae f." data-pos="n-p---fa-" data-shortdef="vein">vēnās</span>
 	<span id="190#rumpit" data-intext="rumpit" data-perslemma="rumpo" data-lemma="rumpō rumpere rūpī ruptus" data-pos="v3spia---" data-shortdef="to break">rumpit</span>
@@ -1417,16 +1427,7 @@
 </p>
 <p data-ln="192a">
 	<span id="192a#gemitus" data-intext="gemitus" data-perslemma="gemitus" data-lemma="gemitus –ūs m." data-pos="n-s---mn-" data-shortdef="groaning; groan">gemitus</span>
-	<span id="192a#strīdēns" data-intext="strīdēns" data-perslemma="strideo" data-lemma="strīdeō strīdēre or strīdō strīdere strīdī" data-pos="v-sppamn-" data-shortdef="to produce a grating or shrill sound; to creak">strīdēns</span>,
-</p>
-<p data-ln="187b">
-	<span id="187b#et" data-intext="et" data-perslemma="et" data-lemma="et" data-pos="c--------" data-shortdef="and">et</span>
-	<span id="187b#sacer" data-intext="sacer" data-perslemma="sacer" data-lemma="sacer sacra sacrum" data-pos="a-s---mn-" data-shortdef="holy">sacer</span>
-	<span id="187b#ignis" data-intext="ignis" data-perslemma="ignis" data-lemma="ignis ignis m." data-pos="n-s---mn-" data-shortdef="fire">ignis</span>
-</p>
-<p data-ln="188a">
-	<span id="188a#pāscitur" data-intext="pāscitur" data-perslemma="pasco" data-lemma="pāscō pāscere pāvī pāstum" data-pos="v3spip---" data-shortdef="to feed">pāscitur</span>
-	<span id="188a#artūs" data-intext="artūs" data-perslemma="artus2" data-lemma="artus –ūs m." data-pos="n-p---ma-" data-shortdef="a joint, the limbs">artūs</span>.
+	<span id="192a#strīdēns" data-intext="strīdēns" data-perslemma="strideo" data-lemma="strīdeō strīdēre or strīdō strīdere strīdī" data-pos="v-sppamn-" data-shortdef="to produce a grating or shrill sound; to creak">strīdēns</span>.
 </p>
 <p data-ln="192b">
 	<span id="192b#iamque" data-intext="iamque" data-perslemma="jam" data-lemma="iam" data-pos="d--------" data-shortdef="now; already">iamque</span>
@@ -1448,7 +1449,7 @@
 	<span id="195#cūstōde" data-intext="cūstōde" data-perslemma="custos" data-lemma="custōs custōdis m." data-pos="n-s---mb-" data-shortdef="guardian">cūstōde</span>
 	<span id="195#sinit" data-intext="sinit" data-perslemma="sino" data-lemma="sinō sinere sīvī situs" data-pos="v3spia---" data-shortdef="to allow">sinit</span>,
 	<span id="195#petitis" data-intext="petitis" data-perslemma="peto" data-lemma="petō petere petīvī petītus" data-pos="v2ppia---" data-shortdef="to seek, go towards">petitis</span>
-	<span id="195#fontēs" data-intext="fontēs" data-perslemma="fons" data-lemma="fōns fontis m." data-pos="n-p---fa-" data-shortdef="spring, fountain">fontēs</span>
+	<span id="195#fontēs" data-intext="fontēs" data-perslemma="fons" data-lemma="fōns fontis m." data-pos="n-p---fa-" data-shortdef="spring, fountain">fontēs</span>,
 </p>
 <p data-ln="196">
 	<span id="196#aliturque" data-intext="aliturque" data-perslemma="alo" data-lemma="alō alere aluī altus" data-pos="v3spip---" data-shortdef="to nourish">aliturque</span>
@@ -1639,7 +1640,7 @@
 	<span id="218#interēmptum" data-intext="interēmptum" data-perslemma="interimo" data-lemma="interimō interimere interēmī interēmptus" data-pos="v-prppng-" data-shortdef="to destroy">interēmptum</span>
 	<span id="218#Lāium" data-intext="Lāium" data-perslemma="Laius" data-lemma="Lāius –ī m." data-pos="n-s---ma-" data-shortdef="Laius (a name)">Lāium</span>
 	<span id="218#ulcīscī" data-intext="ulcīscī" data-perslemma="ulciscor" data-lemma="ulcīscor ulcīscī ultus" data-pos="v--pnp---" data-shortdef="to avenge">ulcīscī</span>
-	<span id="218#iubet" data-intext="iubet" data-perslemma="jubeo" data-lemma="iubeō iubēre iussī iussus" data-pos="v3spia---" data-shortdef="to order">iubet</span>:
+	<span id="218#iubet" data-intext="iubet" data-perslemma="jubeo" data-lemma="iubeō iubēre iussī iussus" data-pos="v3spia---" data-shortdef="to order">iubet</span>.
 </p>
 <p data-ln="219">
 	<span id="219#nōn" data-intext="nōn" data-perslemma="non" data-lemma="nōn" data-pos="d--------" data-shortdef="not">nōn</span>
