Punctuation and a transposition.

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 	<span id="20#parentis" data-intext="parentis" data-perslemma="parens" data-lemma="parēns parentis m./f." data-pos="n-s---mg-" data-shortdef="parent">parentis</span>
 	<span id="20#Phoebus" data-intext="Phoebus" data-perslemma="Phoebus" data-lemma="Phoebus –ī m." data-pos="n-s---mn-" data-shortdef="Phoebus">Phoebus</span>
 	<span id="20#et" data-intext="et" data-perslemma="et" data-lemma="et" data-pos="c--------" data-shortdef="and">et</span>
-	<span id="20#dīrōs" data-intext="dīrōs" data-perslemma="dirus" data-lemma="dīrus –a –um" data-pos="a-p---ma-" data-shortdef="bad omens; curses">dīrōs</span>
+	<span id="20#dīrōs" data-intext="dīrōs" data-perslemma="dirus" data-lemma="dīrus –a –um" data-pos="a-p---ma-" data-shortdef="portentous, awful">dīrōs</span>
 	<span id="20#torōs" data-intext="torōs" data-perslemma="torus" data-lemma="torus –ī m." data-pos="n-p---ma-" data-shortdef="couch, bed">torōs</span>
 </p>
 <p data-ln="21">
@@ -864,7 +864,7 @@
 <p data-ln="106">
 	<span id="106#ille" data-intext="ille" data-perslemma="ille" data-lemma="ille illa illud" data-pos="p-s---mn-" data-shortdef="that">ille</span>,
 	<span id="106#ille2" data-intext="ille" data-perslemma="ille" data-lemma="ille illa illud" data-pos="p-s---mn-" data-shortdef="that">ille</span>
-	<span id="106#dīrus" data-intext="dīrus" data-perslemma="dirus" data-lemma="dīrus –a –um" data-pos="a-s---mn-" data-shortdef="bad omens; curses">dīrus</span>
+	<span id="106#dīrus" data-intext="dīrus" data-perslemma="dirus" data-lemma="dīrus –a –um" data-pos="a-s---mn-" data-shortdef="portentous, awful">dīrus</span>
 	<span id="106#callidī" data-intext="callidī" data-perslemma="callidus" data-lemma="callidus –a –um" data-pos="a-s---ng-" data-shortdef="clever">callidī</span>
 	<span id="106#mōnstrī" data-intext="mōnstrī" data-perslemma="monstrum" data-lemma="mōnstrum mōnstrī n." data-pos="n-s---ng-" data-shortdef="omen; monster">mōnstrī</span>
 	<span id="106#cinis" data-intext="cinis" data-perslemma="cinis" data-lemma="cinis cineris m./f." data-pos="n-s---mn-" data-shortdef="ashes">cinis</span>
@@ -1345,7 +1345,7 @@
 </p>
 <p data-ln="180">
 	<span id="180#ō" data-intext="ō" data-perslemma="o" data-lemma="ō" data-pos="e--------" data-shortdef="O (often with vocative)">ō</span>
-	<span id="180#dīra" data-intext="dīra" data-perslemma="dirus" data-lemma="dīrus –a –um" data-pos="a-s---fn-" data-shortdef="bad omens; curses">dīra</span>
+	<span id="180#dīra" data-intext="dīra" data-perslemma="dirus" data-lemma="dīrus –a –um" data-pos="a-s---fn-" data-shortdef="portentous, awful">dīra</span>
 	<span id="180#nōvī" data-intext="nōvī" data-perslemma="novus" data-lemma="novus –a –um" data-pos="a-s---ng-" data-shortdef="new">nōvī</span>
 	<span id="180#faciēs" data-intext="faciēs" data-perslemma="facies" data-lemma="faciēs facieī f." data-pos="n-s---fn-" data-shortdef="appearance">faciēs</span>
 	<span id="180#lētī" data-intext="lētī" data-perslemma="letum" data-lemma="lētum letī n." data-pos="n-s---ng-" data-shortdef="death">lētī</span> —
@@ -1390,7 +1390,7 @@
 </p>
 <p data-ln="188a">
 	<span id="188a#pāscitur" data-intext="pāscitur" data-perslemma="pasco" data-lemma="pāscō pāscere pāvī pāstum" data-pos="v3spip---" data-shortdef="to feed">pāscitur</span>
-	<span id="188a#artūs" data-intext="artūs" data-perslemma="artus2" data-lemma="artus –ūs m." data-pos="n-p---ma-" data-shortdef="a joint, the limbs">artūs</span>;
+	<span id="188a#artūs" data-intext="artūs" data-perslemma="artus2" data-lemma="artus –ūs m." data-pos="n-p---ma-" data-shortdef="a joint, the limbs">artūs</span>
 </p>
 <p data-ln="186">
 	<span id="186#multōque" data-intext="multōque" data-perslemma="multus" data-lemma="multus –a –um" data-pos="a-s---mb-" data-shortdef="much, many">multōque</span>
@@ -2583,7 +2583,7 @@
 	<span id="330#quidnam" data-intext="quidnam" data-perslemma="quisnam" data-lemma="quisnam (quīnam) quaenam quidnam" data-pos="p-s---na-" data-shortdef="who?">quidnam</span>
 	<span id="330#loquar" data-intext="loquar" data-perslemma="loquor" data-lemma="loquor loquī locūtus" data-pos="v1spsp---" data-shortdef="to speak">loquar</span>?
 	<span id="330#sunt" data-intext="sunt" data-perslemma="sum" data-lemma="sum esse fuī futūrus" data-pos="v3ppia---" data-shortdef="to be">sunt</span>
-	<span id="330#dīra" data-intext="dīra" data-perslemma="dirus" data-lemma="dīrus –a –um" data-pos="a-p---nn-" data-shortdef="bad omens; curses">dīra</span>,
+	<span id="330#dīra" data-intext="dīra" data-perslemma="dirus" data-lemma="dīrus –a –um" data-pos="a-p---nn-" data-shortdef="portentous, awful">dīra</span>,
 	<span id="330#sed" data-intext="sed" data-perslemma="sed" data-lemma="sed" data-pos="c--------" data-shortdef="but">sed</span>
 	<span id="330#in" data-intext="in" data-perslemma="in" data-lemma="in" data-pos="r--------" data-shortdef="in, on">in</span>
 	<span id="330#altō" data-intext="altō" data-perslemma="altus1" data-lemma="altus –a –um" data-pos="a-s---nb-" data-shortdef="tall, high; deep">altō</span>
@@ -7586,7 +7586,7 @@
 	<span id="961#ēruentis" data-intext="ēruentis" data-perslemma="eruo" data-lemma="ēruō ēruere ēruī ērutus" data-pos="v-sppamg-" data-shortdef="to cast out or up; unearth, dig up">ēruentis</span>.
 	<span id="961#gemuit" data-intext="gemuit" data-perslemma="gemo" data-lemma="gemō gemere gemuī" data-pos="v3sria---" data-shortdef="to groan, sigh">gemuit</span>
 	<span id="961#et" data-intext="et" data-perslemma="et" data-lemma="et" data-pos="c--------" data-shortdef="and">et</span>
-	<span id="961#dīrum" data-intext="dīrum" data-perslemma="dirus" data-lemma="dīrus –a –um" data-pos="a-s---na-" data-shortdef="bad omens; curses">dīrum</span>
+	<span id="961#dīrum" data-intext="dīrum" data-perslemma="dirus" data-lemma="dīrus –a –um" data-pos="a-s---na-" data-shortdef="portentous, awful">dīrum</span>
 	<span id="961#fremēns" data-intext="fremēns" data-perslemma="fremo" data-lemma="fremō fremere fremuī" data-pos="v-sppamn-" data-shortdef="to roar">fremēns</span>
 </p>
 <p data-ln="962">
