Dying and killing right.

--- a/index.html
+++ b/index.html
@@ -898,7 +898,7 @@
 <section>
 <header>CHORUS</header>
 <p data-ln="110">
-	<span id="110#occīdis" data-intext="occīdis" data-perslemma="occido1" data-lemma="occīdō occīdere occīdī occīsum" data-pos="v2spia---" data-shortdef="to knock down, kill">occīdis</span>,
+	<span id="110#occīdis" data-intext="occīdis" data-perslemma="occido2" data-lemma="occidō occidere occidī occāsum" data-pos="v2spia---" data-shortdef="to fall, die, be ruined">occīdis</span>,
 	<span id="110#Cadmī" data-intext="Cadmī" data-perslemma="Cadmus" data-lemma="Cadmus –ī m." data-pos="n-s---mg-" data-shortdef="Cadmus">Cadmī</span>
 	<span id="110#generōsa" data-intext="generōsa" data-perslemma="generosus" data-lemma="generōsus –a –um" data-pos="a-s---fv-" data-shortdef="noble-blooded">generōsa</span>
 	<span id="110#prōlēs" data-intext="prōlēs" data-perslemma="proles" data-lemma="prōlēs prōlis f." data-pos="n-p---fv-" data-shortdef="descendants">prōlēs</span>,
@@ -1979,7 +1979,7 @@
 	<span id="257#cuius" data-intext="cuius" data-perslemma="qui2" data-lemma="quī quae quod" data-pos="p-s---mg-" data-shortdef="who, which">cuius</span>
 	<span id="257#Lāius" data-intext="Lāius" data-perslemma="Laius" data-lemma="Lāius –ī m." data-pos="n-s---mn-" data-shortdef="Laius (a name)">Lāius</span>
 	<span id="257#dextrā" data-intext="dextrā" data-perslemma="dexter" data-lemma="dexter dextra dextrum" data-pos="a-s---fb-" data-shortdef="right, on the right side">dextrā</span>
-	<span id="257#occīdit" data-intext="occīdit" data-perslemma="occido1" data-lemma="occīdō occīdere occīdī occīsum" data-pos="v3sria---" data-shortdef="to knock down, kill">occīdit</span>,
+	<span id="257#occīdit" data-intext="occīdit" data-perslemma="occido2" data-lemma="occidō occidere occidī occāsum" data-pos="v3sria---" data-shortdef="to fall, die, be ruined">occīdit</span>,
 </p>
 <p data-ln="258">
 	<span id="258#hunc" data-intext="hunc" data-perslemma="hic" data-lemma="hic haec hoc" data-pos="p-s---ma-" data-shortdef="this, these">hunc</span>
@@ -2404,7 +2404,7 @@
 	<span id="308#lūmine" data-intext="lūmine" data-perslemma="lumen" data-lemma="lūmen luminis n." data-pos="n-s---nb-" data-shortdef="light">lūmine</span>
 	<span id="308#et" data-intext="et" data-perslemma="et" data-lemma="et" data-pos="c--------" data-shortdef="and">et</span>
 	<span id="308#subitō2" data-intext="subitō" data-perslemma="subito" data-lemma="subitō" data-pos="d--------" data-shortdef="suddenly">subitō</span>
-	<span id="308#occīdit" data-intext="occīdit" data-perslemma="occido1" data-lemma="occīdō occīdere occīdī occīsum" data-pos="v3sria---" data-shortdef="to knock down, kill">occīdit</span>.
+	<span id="308#occīdit" data-intext="occīdit" data-perslemma="occido2" data-lemma="occidō occidere occidī occāsum" data-pos="v3sria---" data-shortdef="to fall, die, be ruined">occīdit</span>.
 </p>
 </section>
 <section>
@@ -5771,7 +5771,7 @@
 <p data-ln="742">
 	<span id="742#ante" data-intext="ante" data-perslemma="ante" data-lemma="ante" data-pos="r--------" data-shortdef="before, in front of (adv. and prep. +acc.)">ante</span>
 	<span id="742#Hesperiōs" data-intext="Hesperiōs" data-perslemma="Hesperius" data-lemma="Hesperius –a –um" data-pos="a-p---ma-" data-shortdef="of the west; western">Hesperiōs</span>
-	<span id="742#occīdit" data-intext="occīdit" data-perslemma="occido1" data-lemma="occīdō occīdere occīdī occīsum" data-pos="v3sria---" data-shortdef="to knock down, kill">occīdit</span>
+	<span id="742#occīdit" data-intext="occīdit" data-perslemma="occido2" data-lemma="occidō occidere occidī occāsum" data-pos="v3sria---" data-shortdef="to fall, die, be ruined">occīdit</span>
 	<span id="742#ortūs" data-intext="ortūs" data-perslemma="ortus2" data-lemma="ortus ortūs m." data-pos="n-p---ma-" data-shortdef="birth, rising">ortūs</span>.
 </p>
 <p data-ln="743">
@@ -5995,7 +5995,7 @@
 	<span id="775#viridis" data-intext="viridis" data-perslemma="viridis" data-lemma="viridis –e" data-pos="a-s---mn-" data-shortdef="green">viridis</span>
 	<span id="775#an" data-intext="an" data-perslemma="an" data-lemma="an" data-pos="c--------" data-shortdef="or, whether, if">an</span>
 	<span id="775#frāctō" data-intext="frāctō" data-perslemma="frango" data-lemma="frangō frangere frēgī frāctus" data-pos="v-srppnb-" data-shortdef="to break, shatter">frāctō</span>
-	<span id="775#occīdit" data-intext="occīdit" data-perslemma="occido1" data-lemma="occīdō occīdere occīdī occīsum" data-pos="v3sria---" data-shortdef="to knock down, kill">occīdit</span>?
+	<span id="775#occīdit" data-intext="occīdit" data-perslemma="occido2" data-lemma="occidō occidere occidī occāsum" data-pos="v3sria---" data-shortdef="to fall, die, be ruined">occīdit</span>?
 </p>
 </section>
 <section>
