--- a/index.html
+++ b/index.html
@@ -1934,7 +1934,7 @@
 	<span id="251#signa" data-intext="signa" data-perslemma="signum" data-lemma="signum signī n." data-pos="n-p---na-" data-shortdef="mark, impression, sign; watchword, password">signa</span>
 	<span id="251#quī" data-intext="quī" data-perslemma="qui2" data-lemma="quī quae quod" data-pos="p-s---mn-" data-shortdef="who, which">quī</span>
 	<span id="251#variō" data-intext="variō" data-perslemma="varius1" data-lemma="varius –a –um" data-pos="a-s---mb-" data-shortdef="varied">variō</span>
-	<span id="251#legis" data-intext="legis" data-perslemma="lego2" data-lemma="legō legere lēgī lēctus" data-pos="v2spia---" data-shortdef="to gather; read">legis</span>,
+	<span id="251#regis" data-intext="regis" data-perslemma="rego" data-lemma="regō regere rēxī rēctus" data-pos="v2spia---" data-shortdef="to rule">regis</span>,
 </p>
 <p data-ln="252">
 	<span id="252#quī" data-intext="quī" data-perslemma="qui2" data-lemma="quī quae quod" data-pos="p-s---mn-" data-shortdef="who, which">quī</span>
