--- a/index.html
+++ b/index.html
@@ -1581,7 +1581,7 @@
 	<span id="212#dubia" data-intext="dubia" data-perslemma="dubius" data-lemma="dubius –a –um" data-pos="a-s---fb-" data-shortdef="doubtful">dubia</span>
 	<span id="212#sorte" data-intext="sorte" data-perslemma="sors" data-lemma="sors sortis f." data-pos="n-s---fb-" data-shortdef="fate">sorte</span>
 	<span id="212#perplexā" data-intext="perplexā" data-perslemma="perplexus" data-lemma="perplexus –a –um" data-pos="a-p---nn-" data-shortdef="much entangled">perplexā</span>
-	<span id="212#iacent" data-intext="iacent" data-perslemma="jaceo" data-lemma="iaceō iacēre iacuī iactus" data-pos="v3ppia---" data-shortdef="to lie, be prostrate, lie at rest">iacent</span>.
+	<span id="212#latent" data-intext="latent" data-perslemma="lateo" data-lemma="lateō latēre latuī" data-pos="v3ppia---" data-shortdef="to lie hidden, be hidden">latent</span>.
 </p>
 </section>
 <section>
