--- a/index.html
+++ b/index.html
@@ -1383,20 +1383,11 @@
 	<span id="185#flammeus" data-intext="flammeus" data-perslemma="flammeus" data-lemma="flammeus –a –um" data-pos="a-s---mn-" data-shortdef="fiery, flaming">flammeus</span>
 	<span id="185#ūrit" data-intext="ūrit" data-perslemma="uro" data-lemma="ūrō ūrere ussī ustum" data-pos="v3spia---" data-shortdef="to burn">ūrit</span>
 </p>
-<p data-ln="187b">
-	<span id="187b#et" data-intext="et" data-perslemma="et" data-lemma="et" data-pos="c--------" data-shortdef="and">et</span>
-	<span id="187b#sacer" data-intext="sacer" data-perslemma="sacer" data-lemma="sacer sacra sacrum" data-pos="a-s---mn-" data-shortdef="holy">sacer</span>
-	<span id="187b#ignis" data-intext="ignis" data-perslemma="ignis" data-lemma="ignis ignis m." data-pos="n-s---mn-" data-shortdef="fire">ignis</span>
-</p>
-<p data-ln="188a">
-	<span id="188a#pāscitur" data-intext="pāscitur" data-perslemma="pasco" data-lemma="pāscō pāscere pāvī pāstum" data-pos="v3spip---" data-shortdef="to feed">pāscitur</span>
-	<span id="188a#artūs" data-intext="artūs" data-perslemma="artus2" data-lemma="artus –ūs m." data-pos="n-p---ma-" data-shortdef="a joint, the limbs">artūs</span>
-</p>
 <p data-ln="186">
 	<span id="186#multōque" data-intext="multōque" data-perslemma="multus" data-lemma="multus –a –um" data-pos="a-s---mb-" data-shortdef="much, many">multōque</span>
 	<span id="186#genās" data-intext="genās" data-perslemma="genae" data-lemma="genae –ārum f.pl." data-pos="n-p---fa-" data-shortdef="cheek">genās</span>
 	<span id="186#sanguine" data-intext="sanguine" data-perslemma="sanguis" data-lemma="sanguis sanguinis m." data-pos="n-s---mb-" data-shortdef="blood">sanguine</span>
-	<span id="186#tendit" data-intext="tendit" data-perslemma="tendo" data-lemma="tendō tendere tetendī tentum" data-pos="v3spia---" data-shortdef="to stretch">tendit</span>,
+	<span id="186#tendit" data-intext="tendit" data-perslemma="tendo" data-lemma="tendō tendere tetendī tentum" data-pos="v3spia---" data-shortdef="to stretch">tendit</span>
 </p>
 <p data-ln="187a">
 	<span id="187a#oculīque" data-intext="oculīque" data-perslemma="oculus" data-lemma="oculus oculī m." data-pos="n-p---mn-" data-shortdef="eye">oculīque</span>
@@ -1404,7 +1395,7 @@
 </p>
 <p data-ln="188b">
 	<span id="188b#resonant" data-intext="resonant" data-perslemma="resono" data-lemma="resonō resonāre resonāvī resonātus" data-pos="v3ppia---" data-shortdef="to resound">resonant</span>
-	<span id="188b#aurēs" data-intext="aurēs" data-perslemma="auris" data-lemma="auris auris f." data-pos="n-p---fn-" data-shortdef="ear">aurēs</span>,
+	<span id="188b#aurēs" data-intext="aurēs" data-perslemma="auris" data-lemma="auris auris f." data-pos="n-p---fn-" data-shortdef="ear">aurēs</span>
 </p>
 <p data-ln="189">
 	<span id="189#stillatque" data-intext="stillatque" data-perslemma="stillo" data-lemma="stillō stillāre stillāvī stillātus" data-pos="v3spia---" data-shortdef="to drip with">stillatque</span>
@@ -1413,11 +1404,20 @@
 	<span id="189#aduncae" data-intext="aduncae" data-perslemma="aduncus" data-lemma="aduncus –a –um" data-pos="a-s---fg-" data-shortdef="hooked, bent">aduncae</span>
 </p>
 <p data-ln="190">
-	<span id="190#cruor" data-intext="cruor" data-perslemma="cruor" data-lemma="cruor cruōris m." data-pos="n-s---mn-" data-shortdef="blood, bloodshed">cruor</span>,
+	<span id="190#cruor" data-intext="cruor" data-perslemma="cruor" data-lemma="cruor cruōris m." data-pos="n-s---mn-" data-shortdef="blood, bloodshed">cruor</span>
 	<span id="190#et" data-intext="et" data-perslemma="et" data-lemma="et" data-pos="c--------" data-shortdef="and">et</span>
 	<span id="190#vēnās" data-intext="vēnās" data-perslemma="vena" data-lemma="vēna vēnae f." data-pos="n-p---fa-" data-shortdef="vein">vēnās</span>
 	<span id="190#rumpit" data-intext="rumpit" data-perslemma="rumpo" data-lemma="rumpō rumpere rūpī ruptus" data-pos="v3spia---" data-shortdef="to break">rumpit</span>
-	<span id="190#hiantēs" data-intext="hiantēs" data-perslemma="hio" data-lemma="hiō hiāre hiāvī hiātus" data-pos="v-pppafa-" data-shortdef="to yawn">hiantēs</span>;
+	<span id="190#hiantēs" data-intext="hiantēs" data-perslemma="hio" data-lemma="hiō hiāre hiāvī hiātus" data-pos="v-pppafa-" data-shortdef="to yawn">hiantēs</span>,
+</p>
+<p data-ln="187b">
+	<span id="187b#et" data-intext="et" data-perslemma="et" data-lemma="et" data-pos="c--------" data-shortdef="and">et</span>
+	<span id="187b#sacer" data-intext="sacer" data-perslemma="sacer" data-lemma="sacer sacra sacrum" data-pos="a-s---mn-" data-shortdef="holy">sacer</span>
+	<span id="187b#ignis" data-intext="ignis" data-perslemma="ignis" data-lemma="ignis ignis m." data-pos="n-s---mn-" data-shortdef="fire">ignis</span>
+</p>
+<p data-ln="188a">
+	<span id="188a#pāscitur" data-intext="pāscitur" data-perslemma="pasco" data-lemma="pāscō pāscere pāvī pāstum" data-pos="v3spip---" data-shortdef="to feed">pāscitur</span>
+	<span id="188a#artūs" data-intext="artūs" data-perslemma="artus2" data-lemma="artus –ūs m." data-pos="n-p---ma-" data-shortdef="a joint, the limbs">artūs</span>;
 </p>
 <p data-ln="191">
 	<span id="191#intima" data-intext="intima" data-perslemma="intimus" data-lemma="intimus –a –um" data-pos="a-p---na-" data-shortdef="inmost">intima</span>
