--- a/index.html
+++ b/index.html
@@ -1408,16 +1408,7 @@
 	<span id="190#et" data-intext="et" data-perslemma="et" data-lemma="et" data-pos="c--------" data-shortdef="and">et</span>
 	<span id="190#vēnās" data-intext="vēnās" data-perslemma="vena" data-lemma="vēna vēnae f." data-pos="n-p---fa-" data-shortdef="vein">vēnās</span>
 	<span id="190#rumpit" data-intext="rumpit" data-perslemma="rumpo" data-lemma="rumpō rumpere rūpī ruptus" data-pos="v3spia---" data-shortdef="to break">rumpit</span>
-	<span id="190#hiantēs" data-intext="hiantēs" data-perslemma="hio" data-lemma="hiō hiāre hiāvī hiātus" data-pos="v-pppafa-" data-shortdef="to yawn">hiantēs</span>,
-</p>
-<p data-ln="187b">
-	<span id="187b#et" data-intext="et" data-perslemma="et" data-lemma="et" data-pos="c--------" data-shortdef="and">et</span>
-	<span id="187b#sacer" data-intext="sacer" data-perslemma="sacer" data-lemma="sacer sacra sacrum" data-pos="a-s---mn-" data-shortdef="holy">sacer</span>
-	<span id="187b#ignis" data-intext="ignis" data-perslemma="ignis" data-lemma="ignis ignis m." data-pos="n-s---mn-" data-shortdef="fire">ignis</span>
-</p>
-<p data-ln="188a">
-	<span id="188a#pāscitur" data-intext="pāscitur" data-perslemma="pasco" data-lemma="pāscō pāscere pāvī pāstum" data-pos="v3spip---" data-shortdef="to feed">pāscitur</span>
-	<span id="188a#artūs" data-intext="artūs" data-perslemma="artus2" data-lemma="artus –ūs m." data-pos="n-p---ma-" data-shortdef="a joint, the limbs">artūs</span>;
+	<span id="190#hiantēs" data-intext="hiantēs" data-perslemma="hio" data-lemma="hiō hiāre hiāvī hiātus" data-pos="v-pppafa-" data-shortdef="to yawn">hiantēs</span>;
 </p>
 <p data-ln="191">
 	<span id="191#intima" data-intext="intima" data-perslemma="intimus" data-lemma="intimus –a –um" data-pos="a-p---na-" data-shortdef="inmost">intima</span>
@@ -1425,13 +1416,11 @@
 	<span id="191#vīscera" data-intext="vīscera" data-perslemma="viscera" data-lemma="vīscera –um n.pl." data-pos="n-p---na-" data-shortdef="the entrails, vitals">vīscera</span>
 	<span id="191#quassat" data-intext="quassat" data-perslemma="quasso" data-lemma="quassō quassāre quassāvī quassātus" data-pos="v3spia---" data-shortdef="to shake violently">quassat</span>
 </p>
-<p data-ln="192a">
-	<span id="192a#gemitus" data-intext="gemitus" data-perslemma="gemitus" data-lemma="gemitus –ūs m." data-pos="n-s---mn-" data-shortdef="groaning; groan">gemitus</span>
-	<span id="192a#strīdēns" data-intext="strīdēns" data-perslemma="strideo" data-lemma="strīdeō strīdēre or strīdō strīdere strīdī" data-pos="v-sppamn-" data-shortdef="to produce a grating or shrill sound; to creak">strīdēns</span>.
-</p>
-<p data-ln="192b">
-	<span id="192b#iamque" data-intext="iamque" data-perslemma="jam" data-lemma="iam" data-pos="d--------" data-shortdef="now; already">iamque</span>
-	<span id="192b#amplexū" data-intext="amplexū" data-perslemma="amplexus2" data-lemma="amplexus –ūs m." data-pos="n-s---mb-" data-shortdef="an embrace">amplexū</span>
+<p data-ln="192">
+	<span id="192#gemitus" data-intext="gemitus" data-perslemma="gemitus" data-lemma="gemitus –ūs m." data-pos="n-s---mn-" data-shortdef="groaning; groan">gemitus</span>
+	<span id="192#strīdēns" data-intext="strīdēns" data-perslemma="strideo" data-lemma="strīdeō strīdēre or strīdō strīdere strīdī" data-pos="v-sppamn-" data-shortdef="to produce a grating or shrill sound; to creak">strīdēns</span>.
+	<span id="192#iamque" data-intext="iamque" data-perslemma="jam" data-lemma="iam" data-pos="d--------" data-shortdef="now; already">iamque</span>
+	<span id="192#amplexū" data-intext="amplexū" data-perslemma="amplexus2" data-lemma="amplexus –ūs m." data-pos="n-s---mb-" data-shortdef="an embrace">amplexū</span>
 </p>
 <p data-ln="193">
 	<span id="193#frīgida" data-intext="frīgida" data-perslemma="frigidus" data-lemma="frīgidus –a –um" data-pos="a-p---na-" data-shortdef="cool, cold">frīgida</span>
